--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -46,7 +46,7 @@
   order: 0;
   padding: 10px 12px;
   width: 94%;
-  margin-bottom: 3%
+ 
 
 }
 .cajon-select:focus{
@@ -92,19 +92,35 @@
   }
 
   .input-scouts {
-    width: 95%;
-    
+    width: 70%;
 }
 button#mas-scout {
   width: 2%;
   /* margin-left: 1%; */
   height: 100%;
+  margin: auto;
+
+}
+.btn-mas-div {
+  width: 20%;
+  display: flex;
+}
+button.elim {
+  border: 0;
+  background: transparent;
+}
+.div-elim {
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .asigScout{
   display: flex;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-bottom: 5%;
 }
 div#pass-input {
   display: flex;
