crear y actualizar acudiente con modificaciones di

--- a/src/styles/boton.css
+++ b/src/styles/boton.css
@@ -201,3 +201,10 @@ a#des {
     background-color: #C1121F;
     border:none;
 }
+.Lupa {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
