--- a/src/styles/publicacionsel.css
+++ b/src/styles/publicacionsel.css
@@ -1,6 +1,7 @@
 .conte-publisel {
     margin-right: 1em;
     margin-bottom: 5em;
+    margin-left: 1em;
 }
 .conte-publisel h2{
     text-align: justify;
