--- a/src/styles/evento.css
+++ b/src/styles/evento.css
@@ -9,7 +9,7 @@ button.btn-event {
     width: 100%;
     background-color: transparent;
     border: 0px;
-    margin: 4%;
+    margin-bottom: 4%;
 }
 
 
