--- a/src/styles/admiscout.css
+++ b/src/styles/admiscout.css
@@ -3,7 +3,7 @@
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    margin: 3%;
+
     margin-top: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
@@ -19,7 +19,7 @@
 .cab-tabla-scout{
     background: #C1121F;
     border-radius: 15px;
-    margin: 3%;
+
     margin-bottom: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -74,12 +74,14 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 1em;
 }
 button#busq-filtro {
     width: 2%;
     margin-left: 1%;
     height: 100%;
-    margin-top: 1%;
+    margin: auto;
+    margin-left: 3%;
 }
 div#idclass {
     width: 100%;
