--- a/src/styles/boton.css
+++ b/src/styles/boton.css
@@ -1,9 +1,9 @@
 button.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.MuiButton-outlinedPrimary.MuiButton-sizeMedium.MuiButton-outlinedSizeMedium.css-1rwt2y5-MuiButtonBase-root-MuiButton-root {
-    width: 90%;
+    width: 100%;
     color: #C1121F;
     border-radius: 10px;
-    margin: 5%;
-    margin-top: 0%;
+    margin-bottom: 5%;
+    margin-top: 0;
     /* border: 1px solid #C1121F; */
     font-family: 'Ubuntu';
     font-style: normal;
@@ -14,10 +14,10 @@ button.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.MuiButton-outlinedPr
     border: 3px solid #C1121F;
 }
 button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary.MuiButton-sizeMedium.MuiButton-containedSizeMedium.css-sghohy-MuiButtonBase-root-MuiButton-root {
-    width: 90%;
+    width: 100%;
     background: #C1121F;
     border-radius: 10px;
-    margin: 5%;
+    margin-bottom: 5%;
     margin-top: 0;
     font-family: 'Ubuntu';
     font-style: normal;
