--- a/src/styles/publicacion.css
+++ b/src/styles/publicacion.css
@@ -6,11 +6,10 @@
 button.btn-public {
     display: flex;
     flex-direction: column;
-
-
     background-color: transparent;
     border: 0px;
-    margin: 4%;
+    margin-bottom: 4%;
+    width: 100%;
 }
 
 .btn-public-s1 {
@@ -22,7 +21,7 @@ button.btn-public {
     border-bottom-right-radius: 0;
     display: flex;
     height: 100%;
-    width: 96%;
+    width: 100%;
 }
 
 .btn-public-s1 h2 {
@@ -65,7 +64,7 @@ button.btn-public {
 }
 
 .btn-public-s2 {
-    width: 92%;
+    width: 96%;
     padding: 2%;
     background: #EEEEEE;
     box-shadow: 3px 3px 20px -5px rgb(27 27 27 / 25%);
@@ -149,5 +148,6 @@ img.imagensub{
 .sub-conte-gen{
     display: flex;
     flex-direction: column;
-    margin-left: 3%;
+    margin: 2%;
+
 }
