--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,7 @@ h1{
     line-height: 52px;
     display: flex;
     align-items: center;
-    margin-left: 3%;
+    
 
     /* Complementos//Negro/Negro1 */
 
@@ -24,12 +24,10 @@ h2{
     line-height: 23px;
     display: flex;
     align-items: center;
-
-    /* Complementos//Negro/Negro1 */
-
     color: #292929;
-    margin-left: 3%;
+ 
     margin-bottom: 3%;
+    margin-right: 3%;
 }
 h3{
     font-family: 'Ubuntu';
@@ -40,9 +38,10 @@ h3{
     display: flex;
     align-items: center;
     color: #292929;
-    margin-left: 3%;
+    
     margin-top: 0;
     margin-right: 3%;
+    
 }
 h4{
     color: #292929;
@@ -51,7 +50,7 @@ h4{
     font-style: normal;
     font-weight: 500;
     line-height: 52px;
-    margin-left: 3%;
+    
     margin: 1%;
     margin: 3%;
 
@@ -63,7 +62,7 @@ h5{
     font-style: normal;
     font-weight: 300;
     line-height: 52px;
-    margin-left: 3%;
+ 
     margin-top: 0.1%;
     
 
@@ -81,4 +80,21 @@ h5{
     line-height: normal;
     text-align: center;
     margin-bottom: 0;
+}
+.conte-marg {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+.conte-marg-form {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+.textos-header h1 {
+    margin-left: 3%;
+}
+form {
+    margin-top: 2em;
+}
+.form-div {
+    margin-bottom: 1em;
 }
