--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -43,3 +43,10 @@ input[type="checkbox"]:checked::before {
 .ini-h1{
   margin:0
 }
+img.imgbtn-lay {
+  /* margin: auto; */
+  /* margin-right: 0; */
+  /* margin-left: 0; */
+  margin: 0;
+  margin-bottom: 5%;
+}
