--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -157,6 +157,68 @@ div#pass-input {
   border: none;
   outline: none;
 }
+div#pass-input-login .cajon-input-pass {
+  align-items: center;
+  background: #eee;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 3px 3px 20px -5px rgb(27 27 27 / 25%);
+  color: #9c9c9c;
+  display: flex;
+  flex: none;
+  flex-grow: 0;
+  font-family: Ubuntu;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 400;
+  gap: 10px;
+  line-height: 18px;
+  margin: auto;
+  order: 0;
+  padding: 10px 12px;
+  width: 95%;
+}
+
+div#pass-input-login {
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+div#pass-input-login .position-absolute.pointer.pwd-icon {
+  position: absolute;
+  right: 0;
+  margin-right: 3%;
+}
+input#int-login {
+  margin: auto;
+  width: 95%;
+}
+div#int-login .cajon-input {
+  align-items: center;
+  background: #eee;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 3px 3px 20px -5px rgb(27 27 27 / 25%);
+  color: #9c9c9c;
+  display: flex;
+  flex: none;
+  flex-grow: 0;
+  font-family: Ubuntu;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 400;
+  gap: 10px;
+  line-height: 18px;
+  order: 0;
+  padding: 10px 12px;
+  width: 95%;
+  margin: auto;
+  /* margin-bottom: 3%; */
+}
+select#tipo {
+  width: 100%;
+  margin: auto;
+}
 
 
 
